Color flipper is finished

--- a/1-color-flipper/hex.html
+++ b/1-color-flipper/hex.html
@@ -6,7 +6,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="./style.css" />
     <style>
-      .simple {
+      .hex {
         border-color: #222;
       }
     </style>
@@ -19,10 +19,10 @@
       <div class="navbar">
         <h4>Color Flipper</h4>
         <ul class="navbar__links">
-          <li class="navbar__link simple">
+          <li class="navbar__link">
             <a href="./index.html">Simple</a>
           </li>
-          <li class="navbar__link">
+          <li class="navbar__link hex">
             <a href="hex.html">Hex</a>
           </li>
         </ul>
@@ -38,6 +38,6 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="./app.js"></script>
+    <script src="./hex.js"></script>
   </body>
 </html>
