navbar project's finished, favicons're added to all projects

--- a/3 - reviews/index.html
+++ b/3 - reviews/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/78d7470de0.js"
       crossorigin="anonymous"
     ></script>
-    <title>Counter</title>
+    <title>Reviews</title>
   </head>
   <body>
     <main>
