Menu project is finished

--- a/8-menu/index.html
+++ b/8-menu/index.html
@@ -25,10 +25,10 @@
                 <div class="underline"></div>
             </header>
             <section class="menu__filters">
-                <button class="filter-btn" type="button">All</button>
-                <button class="filter-btn" type="button">breakfast</button>
-                <button class="filter-btn" type="button">lunch</button>
-                <button class="filter-btn" type="button">shakes</button>
+                <button class="filter-btn" type="button" data-filter='all'>All</button>
+                <button class="filter-btn" type="button" data-filter="breakfast">breakfast</button>
+                <button class="filter-btn" type="button" data-filter="lunch">lunch</button>
+                <button class="filter-btn" type="button" data-filter="shakes">shakes</button>
             </section>
             <section class="menu__items">
                 <!-- single item -->
