--- a/9-video/index.html
+++ b/9-video/index.html
@@ -21,6 +21,7 @@
         <img src="./preloader.gif" alt="preloader">
     </div>
     <header>
+        <!-- Video by Taryn Elliott: Pexels -->
         <video class="video-container" muted loop autoplay>
             <source src="./video-city.mp4" type="video/mp4">
         </video>
