--- a/11-tabs/index.html
+++ b/11-tabs/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <!-- content container -->
                     <div class="about__content-container">
-                        <div class="about__content --hidden" id="history">
+                        <div class="about__content --active" id="history">
                             <h4>history</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur
@@ -90,7 +90,7 @@
                                 <li>item</li>
                             </ul>
                         </div>
-                        <div class="about__content" id="goals">
+                        <div class="about__content --hidden" id="goals">
                             <h4>goals</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur,
