14-grocery-bud and 15-slider are finished

--- a/14-grocery-bud/index.html
+++ b/14-grocery-bud/index.html
@@ -30,7 +30,8 @@
             <div class="grocery__list">
                 <!-- <article class="grocery__item">
                     <p class="grocery__title">item</p>
-                    <div class="grocery__controls"><button class="grocery__edit">
+                    <div class="grocery__controls">
+                        <button class="grocery__edit">
                             <i class="fas fa-edit"></i>
                         </button>
                         <button class="grocery__delete">
@@ -39,7 +40,7 @@
                     </div>
                 </article> -->
             </div>
-            <button class="btn grocery__btn-clear" id="clear-btn">Clear items</button>
+            <button class="grocery__btn-clear" id="clear-btn">Clear items</button>
         </div>
     </section>
     <!-- javascript -->
